[package]
name = "reaper-touchbar"
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
rubrail = { path = "../rubrail-rs" }
once_cell = "1.17.0"

[lib]
name = "reaper_touchbar"
crate-type = ["cdylib"]
